# estoque-leigo-posfix-20260222

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  db.py  main.py  middleware_auth.py  models.py  schemas.py  schemas_auth.py
backend/app/static/: styles.css
backend/app/templates/: index.html
backend/scripts/: qa.sh
backend/tests/: test_app.py  test_auth.py  test_csv.py  test_db_persistence.py  test_health.py  test_low_stock.py  test_movements.py  test_products.py
examples/: products.example.csv
frontend/: README.md
frontend/static/: app.js  index.html  login.html
scripts/: qa.sh
