[project]
name = "estoque-leigo"
version = "0.1.0"
description = "Base do sistema de estoque (V1) - FastAPI + SQLite"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "passlib>=1.7.4",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-passlib",
  "types-Jinja2",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true
